--- a/angular/tpl/app.html
+++ b/angular/tpl/app.html
@@ -4,7 +4,7 @@
   <!-- / navbar -->
 
   <!-- menu -->
-  <div data-ng-include=" 'tpl/blocks/aside.html' " class="app-aside hidden-xs {{app.settings.asideColor}}">
+  <div data-ng-include=" 'tpl/blocks/aside.html' " class="app-aside hidden-xs" style="background: white;">
   </div>
   <!-- / menu -->
 
